--- a/surprise.html
+++ b/surprise.html
@@ -435,6 +435,9 @@
         width: 100%;
         border-radius: 16px;
       }
+        .boxMail-container .card2 {
+    display: none;
+  }
       .boxMail-container .card1 { height: 260px; }
       .boxMail-container .card2 { height: 300px; }
       .boxMail-container:hover { transform: none; }
